// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextIpnut component render correctly TextArea/Input component 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-inputContainer-25 makeStyles-primary-29"
  >
    <div
      class="makeStyles-caption-37 makeStyles-inherit-48 makeStyles-label-28"
      style="font-weight: 700;"
    >
      <span>
        test label
      </span>
    </div>
    <textarea
      class="makeStyles-textArea-27 inset small ct-textarea"
      disabled=""
      rows="4"
    >
      test value
    </textarea>
  </div>
</DocumentFragment>
`;

exports[`TextIpnut component render correctly TextInput/Input component 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-inputContainer-1 makeStyles-primary-5"
  >
    <div
      class="makeStyles-caption-13 makeStyles-inherit-24 makeStyles-label-4"
      style="font-weight: 700;"
    >
      <span>
        test label
      </span>
    </div>
    <input
      class="makeStyles-input-2 inset small ct-input"
      disabled=""
      type="text"
      value="test value"
    />
  </div>
</DocumentFragment>
`;
